--- a/src/templater/assets/index.html
+++ b/src/templater/assets/index.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="app.css">
 
   </head>
   <body>
@@ -23,7 +23,7 @@
             </nav>
             <div role="main">
                 <header>
-                    <h1>Templater</h1>
+                    <h1>Jinseng</h1>
                 </header>
                 <div class="content">
                     <p>
